@@ -1106,71 +1106,67 @@ name|hashCode
 argument_list|()
 decl_stmt|;
 name|hash
-operator|+=
-name|precisionStep
-operator|^
-literal|0x64365465
-expr_stmt|;
-if|if
-condition|(
-name|min
-operator|!=
-literal|null
-condition|)
-name|hash
-operator|+=
-name|min
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0x14fa55fb
-expr_stmt|;
-if|if
-condition|(
-name|max
-operator|!=
-literal|null
-condition|)
-name|hash
-operator|+=
-name|max
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0x733fa5fe
-expr_stmt|;
-return|return
+operator|=
+literal|31
+operator|*
 name|hash
 operator|+
-operator|(
-name|Boolean
+name|precisionStep
+expr_stmt|;
+name|hash
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
+name|Objects
 operator|.
-name|valueOf
+name|hashCode
+argument_list|(
+name|min
+argument_list|)
+expr_stmt|;
+name|hash
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
+name|Objects
+operator|.
+name|hashCode
+argument_list|(
+name|max
+argument_list|)
+expr_stmt|;
+name|hash
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
+name|Objects
+operator|.
+name|hashCode
 argument_list|(
 name|minInclusive
 argument_list|)
+expr_stmt|;
+name|hash
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
+name|Objects
 operator|.
 name|hashCode
-argument_list|()
-operator|^
-literal|0x14fa55fb
-operator|)
-operator|+
-operator|(
-name|Boolean
-operator|.
-name|valueOf
 argument_list|(
 name|maxInclusive
 argument_list|)
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0x733fa5fe
-operator|)
+expr_stmt|;
+return|return
+name|hash
 return|;
 block|}
 comment|// members (package private, to be also fast accessible by NumericRangeTermEnum)
