@@ -1574,22 +1574,28 @@ name|hashCode
 argument_list|()
 decl_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|sortedPackedPointsHashCode
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|numDims
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|bytesPerDim
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 return|return
 name|hash
