@@ -1526,57 +1526,71 @@ name|hashCode
 argument_list|()
 decl_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|Arrays
 operator|.
 name|hashCode
 argument_list|(
 name|lowerPoint
 argument_list|)
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|Arrays
 operator|.
 name|hashCode
 argument_list|(
 name|upperPoint
 argument_list|)
-operator|^
-literal|0x733fa5fe
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|Arrays
 operator|.
 name|hashCode
 argument_list|(
 name|lowerInclusive
 argument_list|)
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|Arrays
 operator|.
 name|hashCode
 argument_list|(
 name|upperInclusive
 argument_list|)
-operator|^
-literal|0x733fa5fe
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|numDims
-operator|^
-literal|0x14fa55fb
 expr_stmt|;
 name|hash
-operator|+=
+operator|=
+literal|31
+operator|*
+name|hash
+operator|+
 name|Objects
 operator|.
 name|hashCode
